test/files/neg/bug452.check
bug452.scala:3: error: type mismatch;
 found   : Test.type (with underlying type object Test)
 required: Test.this.Foo
    def this() = this(this);
                      ^
one error found
